tests/ui/parser/column-offset-1-based.rs
# //~ ERROR expected one of `!` or `[`, found `<eof>`
